# RAG-Pipeline

./: ml_ai_corpus.txt  pyproject.toml  requirements.txt
Data_ingest_parsing/: data_ingestion.ipynb
Embeding/: embeding.ipynb
Euron_API/: euron_api.ipynb
HyDE/: HyDe.ipynb
Multi_Type_File_Loader/: pdf_file.ipynb
Query Enhancement/: query Enhancement Pipeline.ipynb
Query Enhancement/pipeline/: chroma.sqlite3
RAG_PIPELINE/: rag_pipeline.ipynb
RAG_PIPELINE/vactor_db/: chroma.sqlite3
RAG_PIPELINE/vector_db/: chroma.sqlite3
vector_stor/: chromadb.ipynb
vector_stor/.chroma.db/: chroma.sqlite3
vector_stor/rag_docs/knowledge_base/: faq.txt  troubleshooting.txt  user_manual.txt
vector_stor/rag_docs/research/: ai_overview.txt  future_trends.txt
