[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.33",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "pypdf>=6.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
    "tiktoken>=0.11.0",
    "unstructured[docx]>=0.18.15",
]
